--- a/Views/Admin/Partials/_UniversityFormPartial.cshtml
+++ b/Views/Admin/Partials/_UniversityFormPartial.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "_UniversityFormPartial";
 }
 
-    <div class="university-table-container mt-20">
+    <div class="table-container mt-20">
         <h2>Universities</h2>
         <div class="university-list">
             <table class="table wider">
