added study program partial
study program partial with university, faculty select, add button and
edit/delete buttons

--- a/Views/Admin/Partials/_UniversityFormPartial.cshtml
+++ b/Views/Admin/Partials/_UniversityFormPartial.cshtml
@@ -5,7 +5,7 @@
 
     <div class="table-container mt-20">
         <h2>Universities</h2>
-        <div class="university-list">
+        <div class="university-list mt-20">
             <table class="table wider">
                 <tbody>
                     @foreach (University uni in ViewBag.Universities)
