--- a/Views/Admin/Partials/_LecturerFormPartial.cshtml
+++ b/Views/Admin/Partials/_LecturerFormPartial.cshtml
@@ -1,7 +1,167 @@
-﻿
+﻿@using Advisor.Models
 @{
     ViewBag.Title = "_LecturerFormPartial";
 }
 
-<h2>_LecturerFormPartial</h2>
+    <div class="table-container mt-20">
+        <div class="form-group">
+            <label for="admin-university">Select university</label>
+            <select class="university-select form-control" id="admin-university">
+                <option selected disabled hidden>University</option>
+                @foreach (University uni in ViewBag.Universities)
+                {
+                    <option value="@uni.Id">@uni.Title</option>
+                }
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="admin-faculty">Select faculty</label>
+            <select class="faculty-select form-control" id="admin-faculty">
+                <option selected disabled hidden>Faculty</option>
+                @for (int i = 0; i < 20; i++)
+                {
+                    <option>Faculty</option>
+                }
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="admin-studyprogram">Select study program</label>
+            <select class="faculty-select form-control" id="admin-studyprogram">
+                <option selected disabled hidden>Study Program</option>
+                @for (int i = 0; i < 20; i++)
+                {
+                    <option>Study Program</option>
+                }
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="admin-course">Select Course</label>
+            <select class="faculty-select form-control" id="admin-course">
+                <option selected disabled hidden>Course</option>
+                @for (int i = 0; i < 20; i++)
+                {
+                    <option>Courses</option>
+                }
+            </select>
+        </div>
+        <h2>Universities</h2>
+        <div class="list mt-20">
+            <table class="table wider">
+                <tbody>
+                    @for(int i = 0; i < 20; i++)
+                    {
+                        <tr>
+                            <th scope="row">Lecturer</th>
+                            <td>
+                                <span data-target="#editLecturerModal" data-toggle="modal"><i class="fas fa-edit"></i></span>
+                                <span><i class="fas fa-trash-alt"></i></span>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+        <button class="btn btn-primary mt-20" data-target="#addLecturerModal" data-toggle="modal">Add Course</button>
+    </div>
+
+<div class="modal fade" tabindex="-1" id="addLecturerModal"
+     data-keyboard="false" data-backdrop="static">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">
+                    &times;
+                </button>
+                <h4 class="modal-title">Add lecturer</h4>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="admin-university">Select university</label>
+                        <select class="university-select form-control" id="admin-university">
+                            <option selected disabled hidden>University</option>
+                            @foreach (University uni in ViewBag.Universities)
+                            {
+                                <option value="@uni.Id">@uni.Title</option>
+                            }
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="admin-faculty">Select faculty</label>
+                        <select class="faculty-select form-control" id="admin-faculty">
+                            <option selected disabled hidden>Faculty</option>
+                            @for (int i = 0; i < 20; i++)
+                            {
+                                <option>Faculty</option>
+                            }
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="admin-studyprogram">Select study program</label>
+                        <select class="faculty-select form-control" id="admin-studyprogram">
+                            <option selected disabled hidden>Study Program</option>
+                            @for (int i = 0; i < 10; i++)
+                            {
+                                <option>Study Program</option>
+                            }
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="admin-course">Select course</label>
+                        <select class="faculty-select form-control" id="admin-course">
+                            <option selected disabled hidden>Course</option>
+                            @for (int i = 0; i < 10; i++)
+                            {
+                                <option>Course</option>
+                            }
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="lecturer-name">Lecturer name/surname</label>
+                        <input class="form-control" placeholder="Enter lecturer name and surname"
+                               type="text" id="lecturer-name" />
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="button" class="btn btn-primary"
+                        data-dismiss="modal">
+                    Cancel
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" tabindex="-1" id="editLecturerModal"
+     data-keyboard="false" data-backdrop="static">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">
+                    &times;
+                </button>
+                <h4 class="modal-title">Edit Lecturer</h4>
+            </div>
+            <div class="modal-body">
+                <form>
+
+                    <div class="form-group">
+                        <label for="lecturer-name">Lecturer name/surname</label>
+                        <input class="form-control" placeholder="Enter lecturer name and surname"
+                               type="text" id="lecturer-name" />
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="button" class="btn btn-primary"
+                        data-dismiss="modal">
+                    Cancel
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
 
