--- a/Views/Admin/Partials/_FacultyFormPartial.cshtml
+++ b/Views/Admin/Partials/_FacultyFormPartial.cshtml
@@ -4,7 +4,6 @@
 }
 
     <div class="table-container mt-20">
-        <h2>Faculties</h2>
         <div class="form-group">
             <label for="admin-university">Select university</label>
             <select name="university" class="university-select form-control" id="admin-university">
@@ -15,7 +14,8 @@
                 }
             </select>
         </div>
-        <div class="university-list">
+        <h2>Faculties</h2>
+        <div class="list">
             <table class="table wider">
                 <tbody>
                     @for (int i = 0; i < 20; i++)
