--- a/Assets/css/admin.css
+++ b/Assets/css/admin.css
@@ -1,7 +1,7 @@
 ﻿body {
 }
 
-.university-list {
+.list {
     width: 100%;
     height: 400px;
     overflow-y: scroll;
@@ -23,4 +23,16 @@
 
 .wider {
     width: 1060px;
+}
+
+.table-container-course{
+    margin: auto;
+    width: 800px;
+}
+
+.course-list {
+    width: 1000px;
+    height: 400px;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
