--- a/Views/Admin/Partials/_CourseFormPartial.cshtml
+++ b/Views/Admin/Partials/_CourseFormPartial.cshtml
@@ -109,10 +109,7 @@
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="button" class="btn btn-primary"
-                        data-dismiss="modal">
-                    Cancel
-                </button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
         </div>
     </div>
@@ -132,17 +129,13 @@
                 <form>
                     <div class="form-group">
                         <label for="editCourseTitle">Course Title</label>
-                        <input class="form-control"
-                               type="text" id="editCourseTitle" />
+                        <input class="form-control" type="text" id="editCourseTitle" />
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="button" class="btn btn-primary"
-                        data-dismiss="modal">
-                    Cancel
-                </button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
         </div>
     </div>
