--- a/Views/Admin/Partials/_FacultyFormPartial.cshtml
+++ b/Views/Admin/Partials/_FacultyFormPartial.cshtml
@@ -64,10 +64,7 @@
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="button" class="btn btn-primary"
-                        data-dismiss="modal">
-                    Cancel
-                </button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
         </div>
     </div>
@@ -87,17 +84,13 @@
                 <form>
                     <div class="form-group">
                         <label for="editFacultyTitle">Faculty Title</label>
-                        <input class="form-control" placeholder="Enter faculty title"
-                               type="text" id="editFacultyTitle" />
+                        <input class="form-control" type="text" id="editFacultyTitle" />
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="button" class="btn btn-primary"
-                        data-dismiss="modal">
-                    Cancel
-                </button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
         </div>
     </div>
