--- a/Views/Admin/Partials/_UniversityFormPartial.cshtml
+++ b/Views/Admin/Partials/_UniversityFormPartial.cshtml
@@ -45,10 +45,7 @@
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="button" class="btn btn-primary"
-                        data-dismiss="modal">
-                    Cancel
-                </button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
         </div>
     </div>
@@ -66,23 +63,16 @@
             </div>
             <div class="modal-body">
                 <form>
-
                     <div class="form-group">
-                        <label for="universityTitle">University Title</label>
-                        <input class="form-control" placeholder="Enter university title"
-                               type="text" id="universityTitle" />
+                        <label for="editUniversityTitle">University Title</label>
+                        <input class="form-control" type="text" id="editUniversityTitle" />
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="button" class="btn btn-primary"
-                        data-dismiss="modal">
-                    Cancel
-                </button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
         </div>
     </div>
 </div>
-
-
