--- a/Views/Admin/Partials/_LecturerFormPartial.cshtml
+++ b/Views/Admin/Partials/_LecturerFormPartial.cshtml
@@ -3,72 +3,72 @@
     ViewBag.Title = "_LecturerFormPartial";
 }
 
-    <div class="admin-container">
-        <div class="row">
-            <div class="col-sm-4 mt-20">
-                <div class="form-group">
-                    <label for="admin-university">Select university</label>
-                    <select class="form-control" id="admin-university">
-                        <option selected disabled hidden>University</option>
-                        @foreach (University uni in ViewBag.Universities)
-                        {
-                            <option value="@uni.Id">@uni.Title</option>
-                        }
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="admin-faculty">Select faculty</label>
-                    <select class="form-control" id="admin-faculty">
-                        <option selected disabled hidden>Faculty</option>
-                        @for (int i = 0; i < 20; i++)
-                        {
-                            <option>Faculty</option>
-                        }
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="admin-studyprogram">Select study program</label>
-                    <select class="form-control" id="admin-studyprogram">
-                        <option selected disabled hidden>Study Program</option>
-                        @for (int i = 0; i < 20; i++)
-                        {
-                            <option>Study Program</option>
-                        }
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="admin-course">Select Course</label>
-                    <select class="form-control" id="admin-course">
-                        <option selected disabled hidden>Course</option>
-                        @for (int i = 0; i < 20; i++)
-                        {
-                            <option>Courses</option>
-                        }
-                    </select>
-                </div>
-                <button class="btn btn-primary mt-20" data-target="#addLecturerModal" data-toggle="modal">Add Lecturer</button>
+<div class="admin-container">
+    <div class="row">
+        <div class="col-sm-4 mt-20">
+            <div class="form-group">
+                <label for="adminLecturers-university">Select university</label>
+                <select class="form-control" id="adminLecturers-university">
+                    <option selected disabled hidden>University</option>
+                    @foreach (University uni in ViewBag.Universities)
+                    {
+                        <option value="@uni.Id">@uni.Title</option>
+                    }
+                </select>
             </div>
-            <div class="col-sm-8">
-                <h2>Lecturers</h2>
-                <div class="list">
-                    <table class="table">
-                        <tbody>
-                            @for (int i = 0; i < 20; i++)
-                            {
-                                <tr>
-                                    <th scope="row" class="admin-listItem">Lecturer</th>
-                                    <td class="admin-icons">
-                                        <span data-target="#editLecturerModal" data-toggle="modal"><i class="fas fa-edit"></i></span>
-                                        <span><i class="fas fa-trash-alt"></i></span>
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                </div>
+            <div class="form-group">
+                <label for="adminLecturers-faculty">Select faculty</label>
+                <select class="form-control" id="adminLecturers-faculty">
+                    <option selected disabled hidden>Faculty</option>
+                    @for (int i = 0; i < 20; i++)
+                    {
+                        <option>Faculty</option>
+                    }
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="adminLecturers-studyprogram">Select study program</label>
+                <select class="form-control" id="adminLecturers-studyprogram">
+                    <option selected disabled hidden>Study Program</option>
+                    @for (int i = 0; i < 20; i++)
+                    {
+                        <option>Study Program</option>
+                    }
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="adminLecturers-course">Select Course</label>
+                <select class="form-control" id="adminLecturers-course">
+                    <option selected disabled hidden>Course</option>
+                    @for (int i = 0; i < 20; i++)
+                    {
+                        <option>Courses</option>
+                    }
+                </select>
+            </div>
+            <button class="btn btn-primary mt-20" data-target="#addLecturerModal" data-toggle="modal">Add Lecturer</button>
+        </div>
+        <div class="col-sm-8">
+            <h2>Lecturers</h2>
+            <div class="list">
+                <table class="table">
+                    <tbody>
+                        @for (int i = 0; i < 20; i++)
+                        {
+                            <tr>
+                                <th scope="row" class="admin-listItem">Lecturer</th>
+                                <td class="admin-icons">
+                                    <span data-target="#editLecturerModal" data-toggle="modal"><i class="fas fa-edit"></i></span>
+                                    <span><i class="fas fa-trash-alt"></i></span>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
+</div>
 
 <div class="modal fade" tabindex="-1" id="addLecturerModal"
      data-keyboard="false" data-backdrop="static">
@@ -83,8 +83,8 @@
             <div class="modal-body">
                 <form>
                     <div class="form-group">
-                        <label for="admin-university">Select university</label>
-                        <select class="university-select form-control" id="admin-university">
+                        <label for="addLecturer-university">Select university</label>
+                        <select class="university-select form-control" id="addLecturer-university">
                             <option selected disabled hidden>University</option>
                             @foreach (University uni in ViewBag.Universities)
                             {
@@ -93,8 +93,8 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="admin-faculty">Select faculty</label>
-                        <select class="faculty-select form-control" id="admin-faculty">
+                        <label for="addLecturer-faculty">Select faculty</label>
+                        <select class="form-control" id="addLecturer-faculty">
                             <option selected disabled hidden>Faculty</option>
                             @for (int i = 0; i < 20; i++)
                             {
@@ -103,8 +103,8 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="admin-studyprogram">Select study program</label>
-                        <select class="faculty-select form-control" id="admin-studyprogram">
+                        <label for="addLecturer-studyprogram">Select study program</label>
+                        <select class="form-control" id="addLecturer-studyprogram">
                             <option selected disabled hidden>Study Program</option>
                             @for (int i = 0; i < 10; i++)
                             {
@@ -113,8 +113,8 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="admin-course">Select course</label>
-                        <select class="faculty-select form-control" id="admin-course">
+                        <label for="addLecturer-course">Select course</label>
+                        <select class="faculty-select form-control" id="addLecturer-course">
                             <option selected disabled hidden>Course</option>
                             @for (int i = 0; i < 10; i++)
                             {
@@ -123,18 +123,15 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="lecturer-name">Lecturer name/surname</label>
-                        <input class="form-control" placeholder="Enter lecturer name and surname"
+                        <label for="lecturer-name">Lecturer's name/surname</label>
+                        <input class="form-control" placeholder="Enter lecturer's name and surname"
                                type="text" id="lecturer-name" />
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="button" class="btn btn-primary"
-                        data-dismiss="modal">
-                    Cancel
-                </button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
         </div>
     </div>
@@ -152,20 +149,15 @@
             </div>
             <div class="modal-body">
                 <form>
-
                     <div class="form-group">
-                        <label for="lecturer-name">Lecturer's name/surname</label>
-                        <input class="form-control" placeholder="Enter lecturer's name and surname"
-                               type="text" id="lecturer-name" />
+                        <label for="editLecturer-name">Lecturer's name/surname</label>
+                        <input class="form-control" type="text" id="editLecturer-name" />
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="button" class="btn btn-primary"
-                        data-dismiss="modal">
-                    Cancel
-                </button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
         </div>
     </div>
