--- a/Views/Admin/Partials/_StudyProgramFormPartial.cshtml
+++ b/Views/Admin/Partials/_StudyProgramFormPartial.cshtml
@@ -78,14 +78,16 @@
                                 }
                             </select>
                         </div>
+                        <div class="form-group">
+                            <label for="studyProgramTitle">Study program title</label>
+                            <input class="form-control" placeholder="Enter study program title"
+                                   type="text" id="studyProgramTitle" />
+                        </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-primary">Submit</button>
-                    <button type="button" class="btn btn-primary"
-                            data-dismiss="modal">
-                        Cancel
-                    </button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
                 </div>
             </div>
         </div>
@@ -106,17 +108,13 @@
                 <form>
                     <div class="form-group">
                         <label for="editStudyProgramTitle">Study Program Title</label>
-                        <input class="form-control"
-                               type="text" id="editStudyProgramTitle" />
+                        <input class="form-control" type="text" id="editStudyProgramTitle" />
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <button type="button" class="btn btn-primary"
-                        data-dismiss="modal">
-                    Cancel
-                </button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
         </div>
     </div>
