Pataisiau ka prazioplinau ;))
istrintas nereikalingas using is controllerio ir pakeistas labelis admin
puslapy

--- a/Views/Admin/Admin.cshtml
+++ b/Views/Admin/Admin.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "Admin";
 }
-<h2>Admin</h2>
+<h2>Admin Dashboard</h2>
 <ul class="nav nav-tabs mt-20">
     <li class="active">
         <a href="#universityTab" data-toggle="tab">Universities</a>
