--- a/Views/Course/Course.cshtml
+++ b/Views/Course/Course.cshtml
@@ -52,24 +52,19 @@
                 </tbody>
             </table>
 
-            <h3>Reviews (@ViewBag.StatsData.ReviewCount)</h3>
+            <h3 data-toggle="tooltip" data-placement="left" title="Press on reviewer to see a full review">Reviews (@ViewBag.StatsData.ReviewCount)</h3>
             <div class="d-flex flex-wrap">
                 @foreach (Review review in ViewBag.Course.Reviews)
                 {
-                    <div class="review-container card">
-                        <h4>@review.User.Name</h4>
-                        <div class="d-flex">
-                            <div class="d-flex mr-5">
-                                <p class="mr-5">
-                                    <i class="fas fa-star"></i>
-                                </p>
-                                <p class="mr-5">
-                                    Rating @review.OveralRating/10
-                                </p>
-                            </div>
-                        </div>
-                        <div class="d-flex">
-                            <div class="d-flex mr-5">
+                    <div class="review-container" data-toggle="collapse" href="#collapse-@review.Id" role="button" aria-expanded="false" aria-controls="collapse-@review.Id">
+                        <h3>
+                            <i class="fas fa-user-circle"></i> @review.User.Name
+                        </h3>
+                        <p class="mr-5">
+                            <i class="fas fa-star"></i>  Rating @review.OveralRating/10
+                        </p>
+                        <div class="collapse" id="collapse-@review.Id">
+                            <div class="card card-body">
                                 @review.Text
                             </div>
                         </div>
@@ -101,3 +96,8 @@
         </div>
     </div>
 </div>
+
+@section scripts
+{
+    @Scripts.Render("~/bundles/review")
+}
