--- a/Views/StudyProgram/StudyProgram.cshtml
+++ b/Views/StudyProgram/StudyProgram.cshtml
@@ -41,25 +41,20 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-8">
-            <h3>Reviews (@ViewBag.StatsData.ReviewCount)</h3>
+        <div class="col-sm-6">
+            <h3 data-toggle="tooltip" data-placement="left" title="Press on reviewer to see a full review">Reviews (@ViewBag.StatsData.ReviewCount)</h3>
             <div class="d-flex flex-wrap">
                 @foreach (Review review in ViewBag.StudyProgram.Reviews)
                 {
-                    <div class="review-container card">
-                        <h4>@review.User.Name</h4>
-                        <div class="d-flex">
-                            <div class="d-flex mr-5">
-                                <p class="mr-5">
-                                    <i class="fas fa-star"></i>
-                                </p>
-                                <p class="mr-5">
-                                    Rating @review.OveralRating/10
-                                </p>
-                            </div>
-                        </div>
-                        <div class="d-flex">
-                            <div class="d-flex mr-5">
+                    <div class="review-container" data-toggle="collapse" href="#collapse-@review.Id" role="button" aria-expanded="false" aria-controls="collapse-@review.Id">
+                        <h3>
+                            <i class="fas fa-user-circle"></i> @review.User.Name
+                        </h3>
+                        <p class="mr-5">
+                            <i class="fas fa-star"></i>  Rating @review.OveralRating/10
+                        </p>
+                        <div class="collapse" id="collapse-@review.Id">
+                            <div class="card card-body">
                                 @review.Text
                             </div>
                         </div>
@@ -67,7 +62,7 @@
                 }
             </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-6">
             <h3>Courses (@ViewBag.StudyProgram.Courses.Count)</h3>
             <div class="flex-wrap">
                 @foreach (Course course in ViewBag.StudyProgram.Courses)
@@ -81,7 +76,8 @@
                                 <p class="mr-5">
                                     <i class="fas fa-star"></i>
                                 </p>
-                                @if (course.Reviews.Count > 0) {
+                                @if (course.Reviews.Count > 0)
+                                {
                                     <p class="mr-5">Overall @Math.Round(course.Reviews.Average(r => r.OveralRating), 2).ToString()</p>
                                 }
                             </div>
@@ -99,4 +95,7 @@
     </div>
 </div>
 
-
+@section scripts
+{
+    @Scripts.Render("~/bundles/review")
+}
